--- a/.github/workflows/main-multi.yml
+++ b/.github/workflows/main-multi.yml
@@ -43,6 +43,7 @@ jobs:
         env:
           IMAGE_NAME: ghcr.io/manimatter/decluttarr
           IMAGE_TAG: maintest
+          SHORT_COMMIT_ID: 9ae733d
         run: |
           # Create a builder instance for amd64 architecture
           docker buildx create --use --name amd64-builder
@@ -55,7 +56,7 @@ jobs:
             --build-arg IMAGE_TAG=$IMAGE_TAG \
             --build-arg SHORT_COMMIT_ID=$SHORT_COMMIT_ID \
             -f docker/Dockerfile \
-            --push
+            --push .
 
           # Create a builder instance for arm64 architecture
           docker buildx create --use --name arm64-builder
@@ -68,7 +69,7 @@ jobs:
             --build-arg IMAGE_TAG=$IMAGE_TAG \
             --build-arg SHORT_COMMIT_ID=$SHORT_COMMIT_ID \
             -f docker/Dockerfile \
-            --push
+            --push .
 
           # Create and push the manifest list
           docker manifest create $IMAGE_NAME:$IMAGE_TAG $IMAGE_NAME:$IMAGE_TAG-amd64 $IMAGE_NAME:$IMAGE_TAG-arm64
