--- a/.github/workflows/main-multi.yml
+++ b/.github/workflows/main-multi.yml
@@ -19,12 +19,6 @@ jobs:
     steps: 
       - name: 'Checkout GitHub Action'
         uses: actions/checkout@main
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
         
       - name: 'Login to GitHub Container Registry'
         uses: docker/login-action@v1
@@ -54,10 +48,7 @@ jobs:
             --build-arg IMAGE_TAG=$IMAGE_TAG \
             --build-arg SHORT_COMMIT_ID=$SHORT_COMMIT_ID \
             -f docker/Dockerfile \
-            .
-
-          # Push the amd64 image
-          docker push $IMAGE_NAME:$IMAGE_TAG-amd64
+            --push .
 
           # Build the arm64 image
           docker build \
@@ -67,18 +58,16 @@ jobs:
             --label com.decluttarr.commit=$SHORT_COMMIT_ID \
             --build-arg ARCH=arm64 \
             --build-arg IMAGE_TAG=$IMAGE_TAG \
-            --build-arg SHORT_COMMIT_ID=$SHORT_COMMIT_ID \ 
+            --build-arg SHORT_COMMIT_ID=$SHORT_COMMIT_ID \
             -f docker/Dockerfile \
-            .
-
-          # Push the arm64 image
-          docker push $IMAGE_NAME:$IMAGE_TAG-arm64
+            --push .
 
           # Create and push the manifest list
           docker manifest create $IMAGE_NAME:$IMAGE_TAG $IMAGE_NAME:$IMAGE_TAG-amd64 $IMAGE_NAME:$IMAGE_TAG-arm64
           docker manifest annotate $IMAGE_NAME:$IMAGE_TAG $IMAGE_NAME:$IMAGE_TAG-arm64 --os linux --arch arm64
           docker manifest annotate $IMAGE_NAME:$IMAGE_TAG $IMAGE_NAME:$IMAGE_TAG-amd64 --os linux --arch amd64
           docker manifest push $IMAGE_NAME:$IMAGE_TAG
+   
 
 
 #    $ docker buildx create --use --name mybuild node-amd64
