--- a/.github/workflows/main-multiX.yml
+++ b/.github/workflows/main-multiX.yml
@@ -62,12 +62,12 @@ jobs:
         run: |
           # Get the manifest digest for the image
           manifest_digest_amd64=$(docker manifest inspect $IMAGE_NAME:$IMAGE_TAG | jq -r '.manifests[] | select(.platform.architecture=="amd64") | .digest')
-          echo manifest_digest_amd64
+          echo "Manifest digest for amd64: $manifest_digest_amd64"
           manifest_digest_arm64=$(docker manifest inspect $IMAGE_NAME:$IMAGE_TAG | jq -r '.manifests[] | select(.platform.architecture=="arm64") | .digest')
-          echo manifest_digest_amd64
+          echo "Manifest digest for arm64: $manifest_digest_arm64"
           manifest_digest_unknown=$(docker manifest inspect $IMAGE_NAME:$IMAGE_TAG | jq -r '.manifests[] | select(.platform.architecture!="amd64" and .platform.architecture!="arm64") | .digest')
-          echo manifest_digest_unknown
-          
+          echo "Manifest digest for unknown: $manifest_digest_unknown"
+
           # Add label for amd64
           if [ ! -z "$manifest_digest_amd64" ]; then
             docker manifest annotate "$IMAGE_NAME:$IMAGE_TAG" "$IMAGE_NAME:$IMAGE_TAG-amd64" --os=linux --arch=amd64 "$manifest_digest_amd64" || true
@@ -81,4 +81,4 @@ jobs:
           # Add label for unknown architectures
           if [ ! -z "$manifest_digest_unknown" ]; then
             docker manifest annotate "$IMAGE_NAME:$IMAGE_TAG" "$IMAGE_NAME:$IMAGE_TAG-unknown" --os=linux --arch=unknown "$manifest_digest_unknown" || true
-          fi
+          fi  
