--- a/.github/workflows/main-multiX.yml
+++ b/.github/workflows/main-multiX.yml
@@ -45,18 +45,18 @@ jobs:
           calculatedSha=$(git rev-parse --short ${{ github.sha }})
           echo "SHORT_COMMIT_ID=$calculatedSha" >> $GITHUB_ENV
 
-      - name: "Build, Tag, and push the Docker image"
-        run: |
-          docker buildx build \
-            --platform linux/amd64,linux/arm64 \
-            -f docker/Dockerfile . \
-            --progress plain \
-            -t $IMAGE_NAME:$IMAGE_TAG \
-            --label com.decluttarr.version=$IMAGE_TAG \
-            --label com.decluttarr.commit=$SHORT_COMMIT_ID \
-            --build-arg IMAGE_TAG=$IMAGE_TAG \
-            --build-arg SHORT_COMMIT_ID=$SHORT_COMMIT_ID \
-            --push \
+      # - name: "Build, Tag, and push the Docker image"
+      #   run: |
+      #     docker buildx build \
+      #       --platform linux/amd64,linux/arm64 \
+      #       -f docker/Dockerfile . \
+      #       --progress plain \
+      #       -t $IMAGE_NAME:$IMAGE_TAG \
+      #       --label com.decluttarr.version=$IMAGE_TAG \
+      #       --label com.decluttarr.commit=$SHORT_COMMIT_ID \
+      #       --build-arg IMAGE_TAG=$IMAGE_TAG \
+      #       --build-arg SHORT_COMMIT_ID=$SHORT_COMMIT_ID \
+      #       --push \
 
       - name: Add architecture-specific labels
         run: |
@@ -68,6 +68,9 @@ jobs:
           manifest_digest_unknown=$(docker manifest inspect $IMAGE_NAME:$IMAGE_TAG | jq -r '.manifests[] | select(.platform.architecture!="amd64" and .platform.architecture!="arm64") | .digest')
           echo "Manifest digest for unknown: $manifest_digest_unknown"
 
+          echo "IMAGE_NAME: $IMAGE_NAME"
+          echo "IMAGE_TAG: $IMAGE_TAG" 
+          
           # Add label for amd64
           if [ ! -z "$manifest_digest_amd64" ]; then
             docker manifest annotate "$IMAGE_NAME:$IMAGE_TAG" "$IMAGE_NAME:$IMAGE_TAG-amd64" --os=linux --arch=amd64 "$manifest_digest_amd64" || true
@@ -82,3 +85,4 @@ jobs:
           if [ ! -z "$manifest_digest_unknown" ]; then
             docker manifest annotate "$IMAGE_NAME:$IMAGE_TAG" "$IMAGE_NAME:$IMAGE_TAG-unknown" --os=linux --arch=unknown "$manifest_digest_unknown" || true
           fi  
+
