--- a/.github/workflows/main-multiX.yml
+++ b/.github/workflows/main-multiX.yml
@@ -68,21 +68,10 @@ jobs:
           manifest_digest_unknown=$(docker manifest inspect $IMAGE_NAME:$IMAGE_TAG | jq -r '.manifests[] | select(.platform.architecture!="amd64" and .platform.architecture!="arm64") | .digest')
           echo "Manifest digest for unknown: $manifest_digest_unknown"
 
-          echo "IMAGE_NAME: $IMAGE_NAME"
-          echo "IMAGE_TAG: $IMAGE_TAG" 
-          
           # Add label for amd64
           if [ ! -z "$manifest_digest_amd64" ]; then
-            docker manifest annotate "$IMAGE_NAME:$IMAGE_TAG" "$IMAGE_NAME:$IMAGE_TAG-amd64" --os=linux --arch=amd64 "$manifest_digest_amd64" || true
+            echo 123
+            docker manifest annotate "$IMAGE_NAME:$IMAGE_TAG" "$manifest_digest_amd64" --os=linux --arch=amd64 || true
           fi
 
-          # Add label for arm64
-          if [ ! -z "$manifest_digest_arm64" ]; then
-            docker manifest annotate "$IMAGE_NAME:$IMAGE_TAG" "$IMAGE_NAME:$IMAGE_TAG-arm64" --os=linux --arch=arm64 "$manifest_digest_arm64" || true
-          fi
-
-          # Add label for unknown architectures
-          if [ ! -z "$manifest_digest_unknown" ]; then
-            docker manifest annotate "$IMAGE_NAME:$IMAGE_TAG" "$IMAGE_NAME:$IMAGE_TAG-unknown" --os=linux --arch=unknown "$manifest_digest_unknown" || true
-          fi  
-
+  
