--- a/.github/workflows/main-multiX.yml
+++ b/.github/workflows/main-multiX.yml
@@ -26,11 +26,11 @@ jobs:
       - name: 'Checkout GitHub Action'
         uses: actions/checkout@main
 
-      # - name: Set up QEMU
-      #   uses: docker/setup-qemu-action@v3
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
 
-      # - name: Set up Docker Buildx
-      #   uses: docker/setup-buildx-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
       - name: 'Login to GitHub Container Registry'
         uses: docker/login-action@v1
@@ -45,27 +45,28 @@ jobs:
           calculatedSha=$(git rev-parse --short ${{ github.sha }})
           echo "SHORT_COMMIT_ID=$calculatedSha" >> $GITHUB_ENV
 
-      # - name: "Build, Tag, and push the Docker image"
-      #   run: |
-      #     docker buildx build \
-      #       --platform linux/amd64,linux/arm64 \
-      #       -f docker/Dockerfile . \
-      #       --progress plain \
-      #       -t $IMAGE_NAME:$IMAGE_TAG \
-      #       --label com.decluttarr.version=$IMAGE_TAG \
-      #       --label com.decluttarr.commit=$SHORT_COMMIT_ID \
-      #       --build-arg IMAGE_TAG=$IMAGE_TAG \
-      #       --build-arg SHORT_COMMIT_ID=$SHORT_COMMIT_ID \
-      #       --push \
-
-      - name: Add architecture-specific labels
+      - name: "Build, Tag, and push the Docker image"
         run: |
-          # Get the manifest digest for the image
-          manifest_digest_amd64=$(docker manifest inspect "$IMAGE_NAME:$IMAGE_TAG" | jq -r '.manifests[] | select(.platform.architecture=="amd64") | .digest')
-          echo "Manifest digest for amd64: $manifest_digest_amd64"
+          docker buildx build \
+            --platform linux/amd64 \
+            -f docker/Dockerfile . \
+            --progress plain \
+            -t $IMAGE_NAME:$IMAGE_TAG \
+            --label com.decluttarr.version=$IMAGE_TAG \
+            --label com.decluttarr.commit=$SHORT_COMMIT_ID \
+            --annotate "$IMAGE_NAME:$IMAGE_TAG-amd64" \
+            --build-arg IMAGE_TAG=$IMAGE_TAG \
+            --build-arg SHORT_COMMIT_ID=$SHORT_COMMIT_ID \
+            --push \
 
-          # Add label for amd64
-          docker manifest annotate "$IMAGE_NAME:$IMAGE_TAG" "$IMAGE_NAME:$IMAGE_TAG-amd64" --os=linux --arch=amd64 
+      # - name: Add architecture-specific labels
+      #   run: |
+      #     # Get the manifest digest for the image
+      #     manifest_digest_amd64=$(docker manifest inspect "$IMAGE_NAME:$IMAGE_TAG" | jq -r '.manifests[] | select(.platform.architecture=="amd64") | .digest')
+      #     echo "Manifest digest for amd64: $manifest_digest_amd64"
+
+      #     # Add label for amd64
+      #     docker manifest annotate "$IMAGE_NAME:$IMAGE_TAG" "$IMAGE_NAME:$IMAGE_TAG-amd64" --os=linux --arch=amd64 
 
 
 
