--- a/.github/workflows/main-multiX.yml
+++ b/.github/workflows/main-multiX.yml
@@ -67,6 +67,7 @@ jobs:
 
       - name: Tag and push amd64 image
         run: |
+          docker images
           docker tag ghcr.io/manimatter/decluttarr:maintestx@sha256:389494656cd076f532bcd59bc459e024295ea88cb450237f3f91243df3412282 ghcr.io/manimatter/decluttarr:maintestx-amd64
           docker push ghcr.io/manimatter/decluttarr:maintestx-amd64
 
