--- a/.github/workflows/main-multiX.yml
+++ b/.github/workflows/main-multiX.yml
@@ -67,12 +67,13 @@ jobs:
 
       - name: Tag and push amd64 image
         run: |
-          docker images
+          # Retrieve Docker image ID
+          IMAGE_ID=$(docker images --filter=reference="$IMAGE_NAME:$IMAGE_TAG" --quiet)
+          echo "Docker Image ID: $IMAGE_ID"        
+
           docker tag ghcr.io/manimatter/decluttarr:maintestx@sha256:389494656cd076f532bcd59bc459e024295ea88cb450237f3f91243df3412282 ghcr.io/manimatter/decluttarr:maintestx-amd64
           docker push ghcr.io/manimatter/decluttarr:maintestx-amd64
 
-      #     # Add label for amd64
-      #     docker manifest annotate "$IMAGE_NAME:$IMAGE_TAG" "$IMAGE_NAME:$IMAGE_TAG-amd64" --os=linux --arch=amd64 
 
 
 
