--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -74,7 +74,7 @@ jobs:
             --push \
    
       - name: "Clean up docker images"
-        uses: dataaxiom/ghcr-cleanup-action@v1
+        uses: dataaxiom/ghcr-cleanup-action@main
         with:
           keep-n-tagged: 10
           exclude-tags: dev
