--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -79,10 +79,9 @@ jobs:
     runs-on: ubuntu-latest    
     steps:     
       - name: "Clean up docker images"
-        uses: dataaxiom/ghcr-cleanup-action@main
+        uses: dataaxiom/ghcr-cleanup-action@v1.0.8
         with:
-          dry-run: true
-          keep-n-tagged: 10
+          # keep-n-tagged: 10
           exclude-tags: dev
           delete-untagged: true
           delete-ghost-images: true
