--- a/docker/requirements.txt
+++ b/docker/requirements.txt
@@ -1,6 +1,9 @@
+# python3 -m pip install -r docker/requirements.txt
 requests==2.32.3
 asyncio==3.4.3
 python-dateutil==2.8.2
 verboselogs==1.7
 pytest==8.0.1
 pytest-asyncio==0.23.5
+pre-commit==3.8.0
+black==24.8.0
