--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,7 @@ on:
   create:
     branches:
       - '*'
+
 jobs:
   validate-branch-name:
     runs-on: ubuntu-latest
@@ -73,6 +74,7 @@ jobs:
   build:
     needs: unit-tests
     runs-on: ubuntu-latest
+    if: github.event_name == 'push'
     steps:
       - uses: actions/checkout@v4
 
