--- a/.pytest.ini
+++ b/.pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
-log_cli = true
+# log_cli = true
 addopts = -q --tb=short -s
 log_cli_level = INFO
 log_cli_format = %(asctime)s - %(levelname)s - %(name)s - %(message)s
