--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -59,12 +59,30 @@ jobs:
     if: github.event_name == 'push'
     steps:
       - uses: actions/checkout@v4
-      
+        with:
+          fetch-depth: '0'
+
+      - name: Bump version and push tag
+        if: ${{ github.ref_name == 'stable' }}
+        id: setversion
+        uses: anothrNick/github-tag-action@1.36.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          WITH_V: true
+          RELEASE_BRANCHES: stable
+         
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+
+      - name: Bump version and push tag
+        id: setversion
+        uses: anothrNick/github-tag-action@1.36.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          WITH_V: true
 
       - name: Bump version and push tag
         id: setversion
